# udp------

./: .gitignore  analysis_PictureCompressor_decompress.md  analysis_centroid_verification.md  analysis_disassembly_image_segmentation_circle_fitting.md  analysis_fusionTrack_processing_pipeline.md  analysis_pc_to_camera_messages.md  analysis_reverse_engineering_sdk_libraries.md  analysis_sdk_centroid_comparison.md  analysis_verification_optimization.md  analyze_capture.py  analyze_inner_frame.py  calibration_output.json  capture_summary.json  decode.py  decode_compressed_images.py  decode_plan.md  decode_roi_records.py  decode_startup_flow.py  decode_stylus_capture.py  decode_tracking_data.py  dll_reverse_decode.py  fusiontrack_client.py  split_pcapng.py  test_sdk_centroid.cpp  verify_centroid_extraction.py  verify_centroid_via_sdk.py  verify_reverse_engineered.py
compare_output/: analysis_report.md  analysis_report.txt  anomaly_centroid_roundtrip.csv  anomaly_fiducials_3d.csv  anomaly_markers.csv  anomaly_reprojections.csv  batch_match_diff.csv  frame_summary.csv  timing_detail.csv
dump_output/: calibration.csv  device_options.csv  fiducials_3d.csv  frame_0000_left.pgm  frame_0000_left.raw  frame_0000_right.pgm  frame_0000_right.raw  frame_0000_xref.csv  frame_0001_left.pgm  frame_0001_left.raw  frame_0001_right.pgm  frame_0001_right.raw  frame_0001_xref.csv  frame_0002_left.pgm  frame_0002_left.raw  frame_0002_right.pgm  frame_0002_right.raw  frame_0002_xref.csv  frame_0003_left.pgm  frame_0003_left.raw  frame_0003_right.pgm  frame_0003_right.raw  frame_0003_xref.csv  frame_0004_left.pgm  frame_0004_left.raw  frame_0004_right.pgm  frame_0004_right.raw  frame_0004_xref.csv  frame_0005_left.pgm  frame_0005_left.raw  frame_0005_right.pgm  frame_0005_right.raw  frame_0005_xref.csv  frame_0006_left.pgm  frame_0006_left.raw  frame_0006_right.pgm  frame_0006_right.raw  frame_0006_xref.csv  frame_0007_left.pgm  frame_0007_left.raw  (+970 more)
fullpipe_output/: analysis_report.txt  centroid_comparison.csv  fiducial_comparison.csv  frame_summary.csv  marker_comparison.csv  timing_summary.csv
fusionTrack SDK x64/advancedAPI/: AdditionalDataStructures.hpp  CMakeLists.txt  EventData.hpp  EvtActiveMarkersBatteryStateV1Data.hpp  EvtActiveMarkersButtonStatusesV1Data.cpp  EvtActiveMarkersButtonStatusesV1Data.hpp  EvtActiveMarkersMaskV1Data.hpp  EvtEioTaggingV1Data.hpp  EvtEioTriggerInfoV1Data.cpp  EvtEioTriggerInfoV1Data.hpp  EvtFansV1Data.cpp  EvtFansV1Data.hpp  EvtSynchronisationPTPV1Data.cpp  EvtSyntheticTemperatureV1Data.cpp  EvtSyntheticTemperatureV1Data.hpp  EvtTemperatureV4Data.cpp  EvtTemperatureV4Data.hpp  FiducialData.hpp  FrameData.cpp  FrameData.hpp  HeaderData.cpp  HeaderData.hpp  MarkerData.cpp  MarkerData.hpp  PictureData.hpp  RawData.hpp  TrackingSystem.hpp  TrackingSystemAbstract.cpp  TrackingSystemAbstract.hpp  version_advancedApi.cpp  version_advancedApi.hpp
fusionTrack SDK x64/atnet/: atnetErrors.h  atnetInterface.h  atnetPlatform.h  atnetTypes.h
fusionTrack SDK x64/data/: Export_2025-03-24_15h43m07_V1_Fiducial.csv  fTk250.xml  geometry012.ini  geometry020.ini  geometry072 - 副本.ini  geometry072.ini  geometry420 - 副本.ini  segmentation250.xml
fusionTrack SDK x64/include/: ftkErrors.h  ftkInterface.h  ftkOptions.h  ftkPlatform.h
fusionTrack SDK x64/lib/: AtracsysDataExchangeLib64.lib  atnetLib64.lib  fusionTrack64.lib
fusionTrack SDK x64/matlab/: CPP_frame.cpp  CPP_fusionTrack.cpp  CPP_fusionTrack.hpp  CPP_geometry.cpp  CPP_helpers.hpp  CPP_option.hpp  run.m
fusionTrack SDK x64/output/: full.pcapng.parts.md  新建 文本文档.txt
fusionTrack SDK x64/samples/: CMakeLists.txt  ftk35_PTPBasic.cpp  geometryHelper.cpp  geometryHelper.hpp  helpers.cpp  helpers_windows.cpp  stereo11_WirelessMarker.cpp  stereo18_DumpDeviceInfo.cpp  stereo19_OpticalCommunication.cpp  stereo2_AcquisitionBasic.cpp  stereo33_Buzzer.cpp  stereo34_ReprocessFrame.cpp  stereo3_AcquisitionAdvanced.cpp  stereo5_AcquisitionRelative.cpp  stereo6_ControlLED.cpp  stereo7_AcquisitionExtended.cpp  stereo99_CompareAlgorithms.cpp  stereo99_DumpAllData.cpp  stereo99_FullPipelineCompare.cpp  version_samples2cams.cpp  version_samples2cams.hpp
fusionTrack_SDK-v4.10.1-linux64/: README.txt  versions.txt
fusionTrack_SDK-v4.10.1-linux64/advancedAPI/: AdditionalDataStructures.hpp  CMakeLists.txt  EventData.cpp  EvtActiveMarkersBatteryStateV1Data.cpp  EvtActiveMarkersBatteryStateV1Data.hpp  EvtActiveMarkersButtonStatusesV1Data.hpp  EvtActiveMarkersMaskV1Data.cpp  EvtActiveMarkersMaskV1Data.hpp  EvtEioTaggingV1Data.cpp  EvtFansV1Data.hpp  EvtSynchronisationPTPV1Data.hpp  EvtSyntheticTemperatureV1Data.hpp  EvtTemperatureV4Data.hpp  FiducialData.cpp  FiducialData.hpp  FrameData.cpp  FrameData.hpp  HeaderData.hpp  Marker64FiducialsData.cpp  Marker64FiducialsData.hpp  MarkerData.hpp  PictureData.cpp  PictureData.hpp  RawData.cpp  RawData.hpp  TrackingSystem.cpp  TrackingSystemAbstract.cpp  TrackingSystemAbstract.hpp  version_advancedApi.cpp
fusionTrack_SDK-v4.10.1-linux64/matlab/: CMakeLists.txt  CPP_frame.hpp  CPP_geometry.hpp  CPP_option.cpp  FrameChecker.m  FusionTrack.m
fusionTrack_SDK-v4.10.1-linux64/samples/: CMakeLists.txt  atnet.cpp  ftk36_TaggerModes.cpp  geometryHelper.cpp  helpers.hpp  helpers_linux.cpp  stereo10_GetTimestamp.cpp  stereo1_ListOptions.cpp  stereo20_DiffLatency.cpp  stereo21_MultipleAcquisition.cpp  stereo22_EnvironmentHandling.cpp  stereo24_CheckDeviceAuthentication.cpp  stereo26_StrobeMode.cpp  stereo29_ExtractCalibrationParameters.cpp  stereo2_AcquisitionBasic.cpp  stereo32_InterpolateFrames.cpp  stereo37_Acquisition64FiducialsMarkers.cpp  stereo3_AcquisitionAdvanced.cpp  stereo4_AcquisitionRawData.cpp  stereo8_GetTemperatures.cpp  stereo9_GetAcceleration.cpp  version_samples2cams.cpp
reverse_algo_lib/: CMakeLists.txt  StereoAlgoLib.cpp  StereoAlgoLib.h  StereoAlgoPipeline.cpp  StereoAlgoPipeline.h  test_with_dump_data.cpp
reverse_engineered_src/: README.md  ReverseEngineeredPipeline.cpp  ReverseEngineeredPipeline.h  StereoCameraSystem.cpp  StereoCameraSystem.h  ftkDevice.cpp  fusionTrack.cpp
(+471 files in other folders)
